--- a/01/04.md
+++ b/01/04.md
@@ -1,20 +1,55 @@
 # MSA container
 
-[base]
-vim src/main/java/com/msa/controller/PostController.java
-Post post = postService.getPost(Long.valueOf(postId.replaceAll("\\,", "")));
+## Multi-stage build
 
----
+```bash
+# Build stage
+FROM maven:3.6.0-jdk-8-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package -Dmaven.test.skip
 
+# --------------------
+
+# Package stage
+FROM openjdk:8-jdk-alpine
+COPY --from=build /home/app/target/*.jar /app.jar
+CMD ["java","-jar","/app.jar"]
+```
+
+## 기본 세팅
+
+### Setup mvnw
+
+```bash
+# using mvnw
 wget https://dlcdn.apache.org/maven/maven-3/3.8.3/binaries/apache-maven-3.8.3-bin.tar.gz
 tar -xvf apache-maven-3.8.3-bin.tar.gz
 ./apache-maven-3.8.3/bin/mvn -N io.takari:maven:wrapper
 ./mvnw spring-boot:run
 ./mvnw package -Dmaven.test.skip
-
----
-
 ```
+
+
+### base project 수정
+
+[complete/base]
+```bash
+vim src/main/java/com/msa/controller/PostController.java (line 98)
+
+# 기존 코드 주석처리
+# Post post = postService.getPost(Long.valueOf(postId))
+Post post = postService.getPost(Long.valueOf(postId.replaceAll("\\,", "")));
+```
+
+
+## Do it more
+
+먼저 일반적인 프로세스로 Srping Boot Application을 띄워 봅니다. 그 이후에, 도커 이미지로 변환한 다음 컨테이너로 simple sns 어플리케이션을 실행해 봅시다.
+
+- single-stage:
+
+```bash
 FROM openjdk:8-jdk-alpine
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
@@ -23,7 +58,9 @@ CMD ["java","-jar","/app.jar"]
 
 ---
 
-```
+- multi-stage:
+
+```bash
 FROM maven:3.6.0-jdk-8-slim AS build
 COPY src /home/app/src
 COPY pom.xml /home/app
@@ -39,18 +76,39 @@ CMD ["java","-jar","/app.jar"]
 
 ---
 
-localhost to IP
+## IP 수정 필요
 
-[base]
+### base project
+
+```bash
 vim src/main/java/com/msa/repository/FollowRestRepository.java
 vim src/main/java/com/msa/repository/FeedRestRepository.java
+```
 
-[sns]
+### social project
+
+```bash
 vim src/main/java/com/msa/repository/AuthTokenRestRepository.java
+```
 
 
 ## Do it more (optional)
 
+도커 컨테이너를 실행할 때 `--add-host`라는 옵션이 있습니다. 해당 옵션은 static DNS 정보를 직접 컨테이너에 주입하는 옵션입니다. 예를 들어 다음과 같이 컨테이너를 실행한다면 다음과 같은 결과를 얻을 수 있습니다.
+
 ```bash
-docker run --add-host="social:x.x.x.x" $IMAGE
+docker run --add-host=hello:192.168.10.10 busybox cat /etc/hosts
+# 127.0.0.1 localhost
+# ...
+# ...
+# 192.169.10.10 hello
+# ...
+```
+
+그렇다면 해당 옵션을 이용하여 컨테이너에 Service Discovery 기능을 부여해 봅시다.
+
+```bash
+docker run --add-host="social:x.x.x.x" -p ... $BASE_IMAGE
+
+docker run --add-host="base:x.x.x.x" -p ... $SOCIAL_IMAGE
 ```
