--- a/01/01.md
+++ b/01/01.md
@@ -219,6 +219,25 @@ curl <내부 혹은 외부IP>:5000
 
 이를 통해 외부 트레픽을 컨테이너 내부까지 전달할 수 있게 됩니다.
 
+
+### Volume
+
+이미지 실행 시, 네트워크 연결뿐만 아니라 로컬의 파일시스템을 컨테이너와 연결할 수 있습니다.
+
+```bash
+# docker run -v $HOST_DIR:$CONTAINER_DIR $IMG
+# 현재 디렉토리를 컨테이너의 nginx 디렉토리와 연결합니다.
+docker run -p 6000:80 -v $(pwd):/usr/share/nginx/html/ -d nginx
+
+# 현재 디렉토리에 hello.txt 파일을 생성합니다.
+echo hello! >> $(pwd)/hello.txt
+# nginx 내부에서 해당 파일이 보이는지 확인합니다.
+curl <내부 혹은 외부IP>:6000/hello.txt
+# hello!
+```
+
+변경 사항이 많은 파일의 경우, 컨테이너 내부에 파일을 두지 않고 호스트 서버의 디렉토리를 연결하여, 호스트 서버에서 조금 더 손쉽게 파일을 수정할 수 있습니다. 또한 컨테이너는 컨테이너 종료시, 저장된 데이터가 사라지지만 볼륨을 이용하여 데이터를 저장하는 경우 데이터가 유실되지 않고 유지되는 장점이 있습니다.
+
 ### 컨테이너 상세 정보 확인
 
 컨테이너의 상세 정보를 출력합니다. 네트워크, 볼륨 등 모든 메터 정보를 포함하고 있습니다.
