--- a/01/03.md
+++ b/01/03.md
@@ -43,7 +43,6 @@ CMD ["python", "hello.py", "guest"]
 - `ENV`: 이미지의 환경변수를 지정합니다.
 - `CMD`: 이미지 실행시, default로 실행되는 파라미터를 지정합니다.
 
-
 ## 도커 빌드
 
 생성한 도커파일을 이용하여 이미지를 생성합니다. 예시에서는 현재 디렉토리를 가르키는 `.`을 사용하였고 `$TAG`를 1로 설정하였습니다.
@@ -83,61 +82,73 @@ docker run -e my_ver=1.5 hello:1
 # hello guest, my version is 1.5!
 ```
 
-### ARG
-
-- `ARG`: Dockerfile 안에서 사용할 수 있는 변수를 정의할 수 있습니다. 파라미터로 넘겨지는 변수의 값에 따라 생성되는 이미지 내용을 바꿀수 있습니다.  
-
-```Dockerfile
-FROM ubuntu:18.04
-
-RUN apt-get update \
-    && apt-get install -y \
-      curl \
-      python-dev
-
-ARG my_ver=1.0
-
-WORKDIR /root
-COPY hello.py .
-ENV my_ver $my_ver
-
-CMD ["python", "hello.py", "guest"]
-```
-
-이미지 빌드시, `--build-arg` 옵션을 붙여 `ARG` 명령에서 지정한 `my_ver` 에 2.0 값을 지정하여 실행할 경우, ARG 명령에서 지정한 기본값이 아닌 2.0이 출력됩니다. 
-
-```bash
-docker build . -t hello:2 --build-arg my_ver=2.0
-docker run hello:2
-# hello guest, my version is 2.0!
-```
-
-하지만 컨테이너 실행 시 여전히 환경변수를 override할 수 있습니다.
-
-```bash
-docker run -e my_ver=2.5 hello:2
-# hello guest, my version is 2.5!
-```
-
 ---
 
-## :trophy: Do it more
+## :trophy: Do it more #1
 
-다음과 같은 wordpress 앱을 실행해주세요.
-
-- 이미지 URL: `wordpress`
-- 사용할 포트: `8080`:`80`
-- 필요한 환경변수
-  - `WORDPRESS_DB_HOST`: `$host`  # <- 사용자마다 다르게 입력합니다.
-  - `WORDPRESS_DB_USER`: `myuser`
-  - `WORDPRESS_DB_PASSWORD`: `mypassword`
-  - `WORDPRESS_DB_NAME`: `mydb`
-
-
-앞서 생성한 mysql 컨테이너와 정상적으로 연결이 되는지 확인해 주세요. 웹 브라우저에서 `localhost:8080` 입력 시, wordpress가 보인다면 성공!
-
-- 정답
+java 프로그램에서 `hello world!`를 출력해 봅시다.
 
 ```bash
-docker run --rm -e WORDPRESS_DB_HOST=$(hostname -i) -e WORDPRESS_DB_USER=myuser -e WORDPRESS_DB_PASSWORD=mypassword -e WORDPRESS_DB_NAME=mydb -p 8080:80 -d wordpress
+docker run java-hello
+# hello world!
 ```
+
+## :trophy: Do it more #2
+
+다음과 같은 간단한 Web Server java 코드가 있다고 생각해 봅시다. 아래와 같이 실행했을 때, 컨테이너에서 응답을 할 수 있도록 `Dockerfile`을 작성해 보세요.
+
+```bash
+curl localhost:8000
+```
+
+- 소스코드: 
+
+```java
+# Test.java
+import java.io.IOException;
+import java.io.OutputStream;
+import java.net.InetSocketAddress;
+
+import com.sun.net.httpserver.HttpExchange;
+import com.sun.net.httpserver.HttpHandler;
+import com.sun.net.httpserver.HttpServer;
+
+public class Test {
+
+    public static void main(String[] args) throws Exception {
+        HttpServer server = HttpServer.create(new InetSocketAddress(8000), 0);
+        server.createContext("/", new MyHandler());
+        server.setExecutor(null); // creates a default executor
+        server.start();
+    }
+
+    static class MyHandler implements HttpHandler {
+        @Override
+        public void handle(HttpExchange t) throws IOException {
+            String response = "Hello World!";
+            t.sendResponseHeaders(200, response.length());
+            OutputStream os = t.getResponseBody();
+            os.write(response.getBytes());
+            os.close();
+        }
+    }
+
+}
+```
+
+```bash
+# if java not installed
+sudo apt update
+sudo apt install -y default-jre default-jdk
+```
+
+```bash
+javac Test.java
+java Test
+
+curl localhost:8000
+```
+
+## :trophy: Do it more #3
+
+https://www.geeksforgeeks.org/different-ways-reading-text-file-java/
