--- a/01/01.md
+++ b/01/01.md
@@ -282,19 +282,8 @@ docker rm $(docker ps -aq) -f
 
 ## :trophy: Do it more
 
-`docker exec $COND_ID curl localhost` 라는 명령을 실행했을 때, 아래와 같은 html 파일이 응답되게 만들어 주세요.
+`nginx` 이미지를 실행하여,
 
-```bash
-# run nginx
-docker run -d nginx
-# curl localhost
-docker exec $COND_ID curl localhost
-```
-
-```html
-<html>
-    <body>
-        <h1>Hello world!</h1>
-    </body>
-</html>
-```
+1. `wget`을 설치합니다.
+2. `echo hello > hello.txt` 파일을 생성하여 nginx 컨테이너의 `/usr/share/nginx/html/` 위치에 복사합니다.
+3. `wget localhost/hello.txt`의 결과를 로컬 호스트 `$HOME` 디렉토리에 저장합니다.
