--- a/01/04.md
+++ b/01/04.md
@@ -1,39 +1,37 @@
 # MSA container
 
-## Multi-stage build
-
-```bash
-# Build stage
-FROM maven:3.6.0-jdk-8-slim AS build
-COPY src /home/app/src
-COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package -Dmaven.test.skip
-
-# --------------------
-
-# Package stage
-FROM openjdk:8-jdk-alpine
-COPY --from=build /home/app/target/*.jar /app.jar
-CMD ["java","-jar","/app.jar"]
-```
-
 ## 기본 세팅
 
-### Setup mvnw
+### Install maven
+
+- Binary:
 
 ```bash
-# using mvnw
 wget https://dlcdn.apache.org/maven/maven-3/3.8.3/binaries/apache-maven-3.8.3-bin.tar.gz
-tar -xvf apache-maven-3.8.3-bin.tar.gz
-./apache-maven-3.8.3/bin/mvn -N io.takari:maven:wrapper
+tar -xvf apache-maven-3.8.3-bin.tar.gz -C /opt
+export PATH=/opt/apache-maven-3.8.3/bin:${PATH}
+```
+
+- apt:
+
+```bash
+sudo apt update
+sudo apt install maven
+```
+
+### Install mvnw wrapper
+
+```bash
+mvn -N io.takari:maven:wrapper
+./mvnw --version
 ./mvnw spring-boot:run
 ./mvnw package -Dmaven.test.skip
 ```
 
-
 ### base project 수정
 
-[complete/base]
+- `complete/base`:
+
 ```bash
 vim src/main/java/com/msa/controller/PostController.java (line 98)
 
@@ -42,57 +40,34 @@ vim src/main/java/com/msa/controller/PostController.java (line 98)
 Post post = postService.getPost(Long.valueOf(postId.replaceAll("\\,", "")));
 ```
 
-
-## Do it more
+## :trophy: Do it more #1
 
 먼저 일반적인 프로세스로 Srping Boot Application을 띄워 봅니다. 그 이후에, 도커 이미지로 변환한 다음 컨테이너로 simple sns 어플리케이션을 실행해 봅시다.
 
-- single-stage:
-
-```bash
-FROM openjdk:8-jdk-alpine
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-CMD ["java","-jar","/app.jar"]
-```
-
 ---
 
-- multi-stage:
+## IP 수정
 
-```bash
-FROM maven:3.6.0-jdk-8-slim AS build
-COPY src /home/app/src
-COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package -Dmaven.test.skip
-
-#
-# Package stage
-#
-FROM openjdk:8-jdk-alpine
-COPY --from=build /home/app/target/*.jar /app.jar
-CMD ["java","-jar","/app.jar"]
-```
-
----
-
-## IP 수정 필요
+Spring Boot 컨테이너가 제대로 동직하지 않습니다. `localhost`로 설정되어 있기 때문입니다. `localhost`를 실제 IP로 수정해 봅시다.
 
 ### base project
 
 ```bash
 vim src/main/java/com/msa/repository/FollowRestRepository.java
+# localhost --> 서버 IP
+
 vim src/main/java/com/msa/repository/FeedRestRepository.java
+# localhost --> 서버 IP
 ```
 
 ### social project
 
 ```bash
 vim src/main/java/com/msa/repository/AuthTokenRestRepository.java
+# localhost --> 서버 IP
 ```
 
-
-## Do it more (optional)
+## :trophy: Do it more #2 (optional)
 
 도커 컨테이너를 실행할 때 `--add-host`라는 옵션이 있습니다. 해당 옵션은 static DNS 정보를 직접 컨테이너에 주입하는 옵션입니다. 예를 들어 다음과 같이 컨테이너를 실행한다면 다음과 같은 결과를 얻을 수 있습니다.
 
