--- a/01/03.md
+++ b/01/03.md
@@ -86,6 +86,12 @@ docker run -e my_ver=1.5 hello:1
 
 ## :trophy: Do it more #1
 
+```bash
+# if java not installed
+sudo apt update
+sudo apt install -y default-jre default-jdk
+```
+
 java 프로그램에서 `hello world!`를 출력해 봅시다.
 
 ```bash
@@ -104,7 +110,7 @@ curl localhost:8000
 - 소스코드: 
 
 ```java
-# Test.java
+# Web.java
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.InetSocketAddress;
@@ -113,7 +119,7 @@ import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 
-public class Test {
+public class Web {
 
     public static void main(String[] args) throws Exception {
         HttpServer server = HttpServer.create(new InetSocketAddress(8000), 0);
@@ -137,18 +143,47 @@ public class Test {
 ```
 
 ```bash
-# if java not installed
-sudo apt update
-sudo apt install -y default-jre default-jdk
-```
-
-```bash
-javac Test.java
-java Test
+javac Web.java
+java Web
 
 curl localhost:8000
 ```
 
-## :trophy: Do it more #3
+## :trophy: Do it more #3 (optional)
 
-https://www.geeksforgeeks.org/different-ways-reading-text-file-java/
+다음과 같은 java 프로그램이 있다고 하였을 때, **`docker -v` 옵션을 이용하여** host내의 특정 디렉토리 안에 들어 있는 파일을 읽어서 출력하도록 이미지를 작성하고 실행해 보세요.
+
+**힌트**: host 디렉토리와 컨테이너 내부 디렉토리 구조가 동일한지 확인해 보세요.
+
+```java
+import java.io.*;
+
+// Main class
+public class Read {
+
+    // main driver method
+    public static void main(String[] args) throws Exception
+    {
+
+        // File path is passed as parameter
+        File file = new File(args[0]);
+
+        // Creating an object of BuffferedReader class
+        BufferedReader br
+            = new BufferedReader(new FileReader(file));
+
+        // Declaring a string variable
+        String st;
+        // Consition holds true till
+        // there is character in a string
+        while ((st = br.readLine()) != null)
+            // Print the string
+            System.out.println(st);
+    }
+}
+```
+
+```bash
+javac Read.java
+java Read Read.java
+```
