--- a/01/01.md
+++ b/01/01.md
@@ -197,7 +197,7 @@ docker run -p 5000:80 nginx
 # /docker-entrypoint.sh: Configuration complete; ready for start up
 ```
 
-> 종료: <CTRL> + <C>
+> 종료: <pre><CTRL> + <C></pre>
 
 다시 백그라운드로 실행합니다. (`-d` 옵션)
 
